package org.yourcompany.yourproject;

public enum TipusMoviment {
    INGRES,
    RETIRADA,
    TRANSFERENCIA
}