@startuml
skinparam classAttributeIconSize 0
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false

package "org.yourcompany.yourproject" {

    class ATM {
        {static} -teclat: Scanner
        -banc: Banc
        -clientActiu: Client
        +main(args: String[])
        -login(): void
        -logout(): void
        -mostrar_menu(): void
    }

    class Banc {
        -nom: String
        +validarClient(dni: String, pin: String): Client
    }

    class Caixer {
        -banc: Banc
        -clientConnectat: Client
        +login(dni: String, pin: String): boolean
        +logout(): void
        +ingressar(numero: String, quantitat: double): boolean
        +retirar(numero: String, quantitat: double): boolean
    }

    class Client {
        -dni: String
        -nom: String
        -intentsFallits: int
        -bloquejat: boolean
        +Client(dni: String, nom: String, pin: String)
        +comprovarPin(pinIntroduit: String): boolean
        +resetIntents(): void
        +getDni(): String
        +getNom(): String
    }

    abstract class Compte {
        #numero: String
        #saldo: double
        #interesAnual: double
        {static} -comptador: int
        {static} -prefix: String
        +Compte(titular: Client, saldo: double)
        +ingressar(quantitat: double): boolean
        +retirar(quantitat: double): boolean
        +transferir(desti: Compte, quantitat: double): boolean
        +calculaInteresAnual(): double
    }

    class CompteCorrent {
        -limitDescobert: double
        +CompteCorrent(titular: Client, saldo: double, limit: double)
        +retirar(quantitat: double): boolean
    }

    class CompteEstalvi {
        -saldoMinim: double
        +CompteEstalvi(titular: Client, saldo: double, minim: double)
        +retirar(quantitat: double): boolean
    }

    class Moviment {
        -dataHora: LocalDateTime
        -descripcio: String
        -tipus: TipusMoviment
        -quantitat: double
        +Moviment(desc: String, tipus: TipusMoviment, q: double)
    }

    enum TipusMoviment {
        INGRES
        RETIRADA
        TRANSFERENCIA
    }

    ' --- RELACIONS D'HERÈNCIA (Rúbrica: Fletxa correcta i polimorfisme) ---
    Compte <|-- CompteCorrent
    Compte <|-- CompteEstalvi

    ' --- RELACIONS DE COMPOSICIÓ (Rúbrica: Diamant negre i dependència forta) ---
    Compte "1" *-- "0..*" Moviment : historial

    ' --- RELACIONS D'ASSOCIACIÓ I MULTIPLICITAT ---
    
    ' Banc — Client (Rúbrica: 1 a 0..*)
    Banc "1" -- "0..*" Client : gestiona

    ' Client — Compte (Rúbrica: 1 a 0..* i referència al titular)
    Client "1" -- "0..*" Compte : titular_de

    ' ATM — Banc (Rúbrica: Associació directa 1 a 1 i navegabilitat)
    ATM "1" --> "1" Banc : depèn_de

    ' ATM — Client (Rúbrica: 0..1 client connectat)
    ATM "1" -- "0..1" Client : clientActiu

    ' Caixer (Rúbrica: Un sol client connectat)
    Caixer "1" -- "0..1" Client : sessió_activa

    ' Moviment (Rúbrica: Ús de l'enum)
    Moviment --> TipusMoviment : tipus
}
@enduml